--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, inital-scale=1">
+<title>Selim Emir Can Portfolio</title>
+<h1>About Me</h1>
 
-<p>My first paragraph.</p>
+<p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+  laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+  quasi architecto beatae vitae dicta sunt explicabo. Nemo <b>enim ipsam voluptatem </b>
+   quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+  eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+  <br><br> qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+  sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+  aliquam <a href="https://www.google.com">quaerat </a> voluptatem. <hr> Ut
+  enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+  <strong>laboriosam </strong>, nisi ut aliquid ex ea commodi consequatur?
+  Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam
+  nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas
+  nulla pariatur?".</p>
 
 </body>
 </html>
