--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, inital-scale=1.0">
+  <title>Selim Emir Can Portfolio Website</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+</head>
 
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, inital-scale=1">
-<title>Selim Emir Can Portfolio</title>
 <h1>About Me</h1>
+
 
 <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
   laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
