--- a/index.html
+++ b/index.html
@@ -19,47 +19,100 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Personal projects</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Resume</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">My Services</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
         </ul>
       </nav>
     </header>
 
-    <!-- Introoduction -->
+    <!-- Introduction -->
     <section class="intro" id="home">
       <h1 class="section__title section_title--intro">
         Hi, I am <strong>Selim Emir Can</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-      <img src="images/Ski.jpg" alt="a picture of Selim Emir Can smiling">
-
-      <!-- About Me-->
-      <section class="about-me" id="about-me">
-        <h2 class="section__title section__title--about-me">What I do</h2>
-        <div class="services"> <!-- CHANGE LATER -->
-          <div class="service">
-            <h3>
-            </h3>
-            <p></p>
-          </div> <!-- service -->
-
-          <div class="service">
-            <h3>
-            </h3>
-            <p></p>
-          </div> <!-- service -->
-
-          <div class="service">
-            <h3>
-            </h3>
-            <p></p>
-          </div> <!-- service -->
-        </div> <!-- services -->
-
-        <a href="#work" class="btn">My Work</a>
-      </section>
+      <img src="images/Ski.jpg" alt="a picture of Selim Emir Can Ski">
     </section>
-  </body>
 
+    <!-- My Services-->
+    <section class="my-services" id="services">
+      <h2 class="section__title section__title--services">What I do</h2>
+      <div class="services"> <!-- CHANGE LATER -->
+        <div class="service">
+          <h3>Programming</h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commod
+         </p>
+        </div> <!-- service -->
+
+        <div class="service">
+          <h3>PCB Design</h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commod
+         </p>
+        </div> <!-- service -->
+
+        <div class="service">
+          <h3>Machine Learning</h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commod
+         </p>
+        </div> <!-- service -->
+      </div> <!-- services -->
+      
+      <a href="#work" class="btn">My Work</a>
+    </section>
+
+    <!--About Me-->
+    <section class="about-me" id="about">
+      <h2 class="section__title section_title-about">Who I am</h2>
+      <p class="section__subtitle section__subtitle_about"></p>
+
+      <div class="about-me__body">
+        <p></p>
+        <p></p>
+      </div>
+
+      <img src="images/Vesika.jpg" alt="Selim Emir Can Vesika"
+    </section>
+
+    <!-- My work-->
+    <section class="my-work" id="work">
+      <h2 class="section__title">My work</h2>
+      <p class="section__subtitle"></p>
+
+      <div class="portfolio">
+
+        <!-- Portfolio item 0-->
+        <a href="#" class="portfilio__item">
+          <img src="images/ece-sam-logo.png" alt="" class="portfolio__img">
+        </a>
+
+        <!-- Portfolio item 2-->
+        <a href="#" class="portfilio__item">
+          <img src="images/ece-sam-logo.png" alt="" class="portfolio__img">
+        </a>
+
+        <!-- Portfolio item 3-->
+        <a href="#" class="portfilio__item">
+          <img src="images/ece-sam-logo.png" alt="" class="portfolio__img">
+        </a>
+      </div>
+    </section>
+
+    <!-- Footer-->
+    <footer>
+      <a href="mailto:emir2903@gmail.com" class="footer__link">emir2903@gmail.com</a>
+      <ul class="social-list">
+        <li class="social-list__item"><a class="social-list__link" href="https://github.com">a</a></li>
+        <li class="social-list__item"><a class="social-list__link" href="https://github.com">b</a></li>
+        <li class="social-list__item"><a class="social-list__link" href="https://github.com">c</a></li>
+        <li class="social-list__item"><a class="social-list__link" href="https://github.com">d</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
