--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         Hi, I am <strong>Selim Emir Can</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-      <img src="images/Vesika.jpg" alt="Selim Emir Can Vesika"
+      <img src="images/Vesika.jpg" alt="Selim Emir Can Vesika">
     </section>
 
     <!-- My Services-->
