--- a/index.html
+++ b/index.html
@@ -46,14 +46,17 @@
 						<!-- <span class="date">April 25, 2017</span> -->
 						<h2>Selim Emir Can</h2>
 						<h3> About Me</h3>
-						<a href="#" class="image fit"><img src="images/Ski.jpg" alt="" /></a>
-						<p>
-							<i>
-								Hi, my name is Selim Emir Can! I am a rising Junior studying electrical engineering at UCLA. I am passionate about mechatronics
-								and am currently conducting research in the Robotics and Mechanisms Laboratory (RoMeLa). Outside of school, I like making personal
-								projects, tutoring, playing basketball and table tennis.
-							</i>
-						</p>
+						<div class="row">
+							<div class="col-3"><span></span></div>
+							<div class="col-6"><span class="image fit"><img src="images/Ski.jpg" alt="" height="500" /></span></div>
+							<p>
+								<i>
+									Hi, my name is Selim Emir Can! I am a rising Junior studying electrical engineering at UCLA. I am passionate about mechatronics
+									and am currently conducting research in the Robotics and Mechanisms Laboratory (RoMeLa). Outside of school, I like making personal
+									projects, tutoring, playing basketball and table tennis.
+								</i>
+							</p>
+						</div>
 					</header>
 				</article>
 
