--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 						<h3> About Me</h3>
 						<div class="row">
 							<div class="col-3"><span></span></div>
-							<div class="col-6"><span class="image fit"><img src="images/Ski.jpg" alt="" height="500" /></span></div>
-							<p>
-								<i>
-									Hi, my name is Selim Emir Can! I am a rising Junior studying electrical engineering at UCLA. I am passionate about mechatronics
-									and am currently conducting research in the Robotics and Mechanisms Laboratory (RoMeLa). Outside of school, I like making personal
-									projects, tutoring, playing basketball and table tennis.
-								</i>
-							</p>
+							<div class="col-6"><span class="image fit"><img src="images/Ski.jpg" alt="" /></span></div>
 						</div>
+						<p>
+							<i>
+								Hi, my name is Selim Emir Can! I am a rising Junior studying electrical engineering at UCLA. I am passionate about mechatronics
+								and am currently conducting research in the Robotics and Mechanisms Laboratory (RoMeLa). Outside of school, I like making personal
+								projects, tutoring, playing basketball and table tennis.
+							</i>
+						</p>
 					</header>
 				</article>
 
