--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 				<!-- Featured Post -->
 				<article class="post featured">
 					<header class="major">
-						<!-- <span class="date">April 25, 2017</span> -->
 						<h2>Selim Emir Can</h2>
 						<h3> About Me</h3>
 						<div class="row">
@@ -67,19 +66,19 @@
 							<span class="date">Robotics Research</span>
 							<h2>Modular <br /> Gas Sensor Shell</h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/Enose-Cov.jpg" alt=""/></a>
+						<a href="GasSensor.html" class="image fit"><img src="images/EnosePost.jpg" alt=""/></a>
 						<p>
 							I designed a gas sensor shell to 1) store an array of sensors oriented correctly relative to the gas flow 2) have enough space to
 							accomadate wiring, a PCB and a headless Raspberry Pi 3) have a tower-like structure to add/remove sensors if needed.
 						</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">Find out more</a></li>
+							<li><a href="GasSensor.html" class="button">Find out more</a></li>
 						</ul>
 					</article>
 					<article>
 						<header>
 							<span class="date">Robotics Research</span>
-							<h2>2 in 1 Spatula</h2> <br /><br />
+							<h2>2 in 1 Spatula</h2>
 						</header>
 						<a href="2in1Spatula.html" class="image fit"><img src="images/FinalSPATULA-Assembled.jpg" alt="" /></a>
 						<p>
@@ -92,18 +91,15 @@
 					</article>
 					<article>
 						<header>
-							<span class="date">April 18, 2017</span>
-							<h2>
-								<a href="#">
-									Ante mattis<br />
-									interdum dolor
-								</a>
-							</h2>
+							<span class="date">Class Project</span>
+							<h2>Path Following Car</h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-						<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+						<a href="ECE-3-Car.html" class="image fit"><img src="images/ece3.jpg" alt="" /></a>
+						<p>
+							I used sensor fusion and PID control to program a path following car.
+						</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">Full Story</a></li>
+							<li><a href="ECE-3-Car.html" class="button">Find out more</a></li>
 						</ul>
 					</article>
 					<article>
