--- a/index.html
+++ b/index.html
@@ -103,118 +103,53 @@
 						</ul>
 					</article>
 					<article>
-						<header>
-							<span class="date">April 14, 2017</span>
-							<h2>
-								<a href="#">
-									Tempus sed<br />
-									nulla imperdiet
-								</a>
-							</h2>
-						</header>
-						<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-						<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button">Full Story</a></li>
-						</ul>
-					</article>
-					<article>
-						<header>
-							<span class="date">April 11, 2017</span>
-							<h2>
-								<a href="#">
-									Odio magna<br />
-									sed consectetur
-								</a>
-							</h2>
-						</header>
-						<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-						<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button">Full Story</a></li>
-						</ul>
-					</article>
-					<article>
-						<header>
-							<span class="date">April 7, 2017</span>
-							<h2>
-								<a href="#">
-									Augue lorem<br />
-									primis vestibulum
-								</a>
-							</h2>
-						</header>
-						<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-						<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button">Full Story</a></li>
-						</ul>
+						<div class="row">
+							<div class="col-12">
+
+								<h3>Course Work</h3>
+								<ul>
+									<li>Principles of Feedback Control</li>
+									<li>Data Structures & Algorithms</li>
+									<li>Systems and Signals</li>
+									<li>Logic Design of Digital Systems</li>
+									<li>Fluid Mechanics</li>
+									<li>Statics and Strengths of Materials</li>
+								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12">
+
+								<h3>Skills</h3>
+								<ul>
+									<li>3-D Modelling (Solidworks)</li>
+									<li>Rapid Prototyping (Laser cutting, 3-D printing)</li>
+									<li>C/C++, MATLAB, Python</li>
+									<li>Adobe Creative Cloud</li>
+								</ul>
+							</div>
+						</div>
+
 					</article>
 				</section>
-
-				<!-- Footer -->
-				<footer>
-					<div class="pagination">
-						<!--<a href="#" class="previous">Prev</a>-->
-						<a href="#" class="page active">1</a>
-						<a href="#" class="page">2</a>
-						<a href="#" class="page">3</a>
-						<span class="extra">&hellip;</span>
-						<a href="#" class="page">8</a>
-						<a href="#" class="page">9</a>
-						<a href="#" class="page">10</a>
-						<a href="#" class="next">Next</a>
-					</div>
-				</footer>
-
 			</div>
 
 			<!-- Footer -->
 			<footer id="footer">
-				<section>
-					<form method="post" action="#">
-						<div class="fields">
-							<div class="field">
-								<label for="name">Name</label>
-								<input type="text" name="name" id="name" />
-							</div>
-							<div class="field">
-								<label for="email">Email</label>
-								<input type="text" name="email" id="email" />
-							</div>
-							<div class="field">
-								<label for="message">Message</label>
-								<textarea name="message" id="message" rows="3"></textarea>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" /></li>
-						</ul>
-					</form>
-				</section>
 				<section class="split contact">
 					<section class="alt">
-						<h3>Address</h3>
-						<p>
-							1234 Somewhere Road #87257<br />
-							Nashville, TN 00000-0000
-						</p>
-					</section>
-					<section>
-						<h3>Phone</h3>
-						<p><a href="#">(000) 000-0000</a></p>
+						<h3>Hometown</h3>
+						<p>Istanbul, Turkey / Corning, New York</p>
 					</section>
 					<section>
 						<h3>Email</h3>
-						<p><a href="#">info@untitled.tld</a></p>
+						<p><a href="#">emir2903@gmail.com</a></p>
 					</section>
 					<section>
 						<h3>Social</h3>
 						<ul class="icons alt">
-							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/selim-emir-can" class="icon brands fa-linkedin" target="_blank"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/Selim-Emir-Can/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 						</ul>
 					</section>
 				</section>
