--- a/2in1Spatula.html
+++ b/2in1Spatula.html
@@ -74,6 +74,11 @@
                         are made from ABS plastic resulting in a mass of 578.27 grams. The torque required for the motor to lift 1kg of food is determined to be 2.037 N*m or
                         20.37kg/cm. Using a factor of safety of 1.5, requirement 3 is satisfied with the use of servos that have a 35kg/cm stall torque at 5.0-7.0V operating voltage.
                         <br /><br />
+                        In my intial design, I had the flipper spatula about 3mm above the scraper spatula and hence there was no need to have a cut-out of the scraper spatula profile on the
+                        flipper spatula. However, I quickly realized that the scraper spatula would hit the pan earlier than the flipper spatula even if the intent was to lift food with the
+                        flipper sptula. To overcome this, I made sure both spatulas are on the same level by making a cut-out of the scraper spatula profile on the flipper spatula. To avoid
+                        having food fall out of this new gap, I covered it with extra material.
+                        <br /><br />
                         One challenge in creating a design fitting the clamp and the flipper spatula compactly. I overcame this challenge by positioning the clamp inside the flipper spatula.
                         However, by doing so, I removed 2 of the 4 rods supporting the flipper spatula because they would constrain the motion of the clamp. As a consquence the support given
                         to the flipper spatula by the rods connecting to the servo was insignificantly weakeaned. Nevertheless, cups were placed under the big spatula as a pre-cautionary measure.
