--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<a href="GasSensor.html" class="image fit"><img src="images/EnosePost.jpg" alt=""/></a>
 						<p>
 							I designed a gas sensor shell to 1) store an array of sensors oriented correctly relative to the gas flow 2) have enough space to
-							accomadate wiring, a PCB and a headless Raspberry Pi 3) have a tower-like structure to add/remove sensors if needed.
+							accomadate wiring, a PCB and a headless Raspberry Pi 3) be modular to add/remove sensors if needed.
 						</p>
 						<ul class="actions special">
 							<li><a href="GasSensor.html" class="button">Find out more</a></li>
