--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
 
 			<!-- Intro -->
 			<div id="intro">
-				<h1>Emir's Portfolio</h1>
-				<p>A collection of my personal projects and research.</p>
-				<ul class="actions"><li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li></ul>
-
+				<h1>
+					Emir's Portfolio
+				</h1>
+				<p>
+					A collection of my personal projects and research.
+				</p>
+				<ul class="actions">
+					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				</ul>
 			</div>
 
+
 			<!-- Header -->
+			<header id="header">
+				<a href="index.html" class="logo">Continue</a>
+			</header>
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
@@ -66,7 +75,7 @@
 							<span class="date">Robotics Research</span>
 							<h2>Modular <br /> Gas Sensor Shell</h2>
 						</header>
-						<a href="GasSensor.html" class="image fit"><img src="images/EnosePost.jpg" alt=""/></a>
+						<a href="GasSensor.html" class="image fit"><img src="images/EnosePost.jpg" alt="" /></a>
 						<p>
 							I designed a gas sensor shell to 1) store an array of sensors oriented correctly relative to the gas flow 2) have enough space to
 							accomadate wiring, a PCB and a headless Raspberry Pi 3) be modular to add/remove sensors if needed.
@@ -125,7 +134,7 @@
 									<li>3-D Modelling (Solidworks)</li>
 									<li>Rapid Prototyping (Laser cutting, 3-D printing)</li>
 									<li>C/C++, MATLAB, Python</li>
-									<li>Adobe Creative Cloud</li>
+									<li>Adobe Creative Cloud, Microsoft Office</li>
 								</ul>
 							</div>
 						</div>
