--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo">Continue</a>
+				<a href="index.html" class="logo">Home</a>
 			</header>
 			<!-- Nav -->
 			<nav id="nav">
