--- a/AboutMe.html
+++ b/AboutMe.html
@@ -49,8 +49,7 @@
                 </div>
                 <p>
                     Hi! My name is Selim Emir Can, and I am a Junior at UCLA studying Electrical Engineering. I was born and raised in
-                    Istanbul, Turkey but moved to Corning, New York during my sophomore year of high school school, where I
-                    then attended Corning-Painted Post High School. I am indebted to my high school teachers for shaping my broad
+                    Istanbul, Turkey but moved to Corning, New York during my sophomore year of high school school. I am indebted to my high school teachers for shaping my broad
                     interests in STEM, teaching me lessons applicable to situations far beyond the laboratory or
                     classroom, and indebted to encouraging friends who, just like me, are all passionate about engineering and science.
                     Likewise, my professors at UCLA have allowed me to develop a completely new appreciation for engineering, math and pyhsics which I am very grateful for.
