--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 				<!-- Featured Post -->
 				<article class="post featured">
 					<header class="major">
-						
+						<div class="row">
+							<div class="col-3"><span></span></div>
+							<div class="col-6"><span class="image fit"><img src="images/Ski.jpg" alt="" /></span></div>
+						</div>
 						<p>
 							<i>
 								Hi, my name is Selim Emir Can! I am a rising Junior studying electrical engineering at UCLA. I am passionate about mechatronics
