--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<p>
 							<i>
 								Hi, my name is Selim Emir Can! I am a rising Junior studying electrical engineering at UCLA. I am passionate about mechatronics
-								and am currently conducting research in the Robotics and Mechanisms Laboratory (RoMeLa).
+								and am currently conducting research with the <a href="http://visual.ee.ucla.edu/" target="_blank">Visual Machines Group</a>.
 							</i>
 						</p>
 					</header>
@@ -107,6 +107,19 @@
 						</p>
 						<ul class="actions special">
 							<li><a href="ECE-3-Car.html" class="button">Find out more</a></li>
+						</ul>
+					</article>
+					<article>
+						<header>
+							<span class="date">Class Project</span>
+							<h2>AM Radio Reciever</h2>
+						</header>
+						<a href="AM-RADIO.html" class="image fit"><img src="images/amradio.jpg" alt="" /></a>
+						<p>
+							Learned the fundamentials of Amplitude Modulation and created an AM Radio Reciever using basic circuits knowledge.
+						</p>
+						<ul class="actions special">
+							<li><a href="AM-RADIO.html" class="button">Find out more</a></li>
 						</ul>
 					</article>
 					<article>
