--- a/AM-RADIO.html
+++ b/AM-RADIO.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Path Following Car</title>
+    <title>AM Radio Reciever</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +26,7 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="2in1Spatula.html">Path Following Car</a></li>
+                <li class="active"><a href="AM-RADIO.html">AM Radio Reciever</a></li>
             </ul>
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/selim-emir-can" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
@@ -46,12 +46,20 @@
                         Learned the fundamentials of amplitude modulation and created an AM Radio Reciever using basic circuits knowledge.
                     </p>
                 </header>
-
+                <div class="row">
+                            <div class="col-3"><span></span></div>
+                            <div class="col-6">
+                                <span class="image fit">
+                                    <img src="images/circuit.jpg" alt="" />
+                                    <p><i><b>Figure 1:</b> AM Radio Reciever Circuit implementation</i></p>
+                                </span>
+                            </div>
+                        </div>
                 <div class="image main">
                     <h2>Summary</h2>
                     <p>
                         I learned about the fundamentals of amplitude modulation and how to create an AM Radio Reciever for my physics lab final project. My group's project presentation can be found
-                        <a href="pdfs/4BL Project Presentation.pdf" target="_blank">here</a> and our finnal report can be found <a href="pdfs/4BL Project Report.pdf" target="_blank">here</a>.
+                        <a href="pdfs/4BL Project Presentation.pdf" target="_blank">here</a> and our final report can be found <a href="pdfs/4BL Project Report.pdf" target="_blank">here</a>.
                     </p>
                 </div>
             </section>
