--- a/AM-RADIO.html
+++ b/AM-RADIO.html
@@ -57,9 +57,39 @@
                         </div>
                 <div class="image main">
                     <h2>Summary</h2>
+                    
                     <p>
-                        I learned about the fundamentals of amplitude modulation and how to create an AM Radio Reciever for my physics lab final project. My group's project presentation can be found
-                        <a href="pdfs/4BL Project Presentation.pdf" target="_blank">here</a> and our final report can be found <a href="pdfs/4BL Project Report.pdf" target="_blank">here</a>.
+                        FM and AM Radio waves are commonly used to send information across a wide range of
+                        frequencies. AM, or amplitude modulated waves have been used for over a century for
+                        broadcasting and various forms of wireless communication. The construction of an Amplitude
+                        Modulated wave is simple: the amplitude of a carrier signal is varied in proportion with the
+                        information wave and the combined signal is transmitted. These waveforms can be constructed
+                        anywhere between 540kHz-1700 kHz, a frequency range that makes it easy to build a circuit that
+                        can receive the radio wave and detect the information signal.
+                    </p>
+                    <p>
+                        The main goal of our project was to build an AM radio receiver by constructing a circuit
+                        that can wirelessly receive signals within the radio frequency range, and filter out the carrier
+                        wave to recover the information signal. The main circuit components included: an LC tank
+                        circuit with a resonant frequency tuned to 100kHz (the carrier wave frequency), an operational
+                        amplifier to increase the voltage of the received signal, and a diode to rectify the signal,
+                        and an RC circuit to filter out the carrier wave. The resulting output would then be connected
+                        to a speaker which would play the recovered information signal (we chose to use a “Concert A” or
+                        a sine wave with a frequency of 440Hz) we intended to receive. Three different circuits named
+                        Initial Circuit, Audio Detection Circuit, AM Radio Receiver Circuit were built and data was collected
+                        using an Analog Discovery 2 and an application called Waveforms.
+                    </p>
+                    <p>
+                        Overall, the Initial Circuit and the AM Radio Receiver Circuit did not work properly due
+                        to a variety of reasons including the lack of an additional operational amplifier, poor choice of
+                        location to receive signals, and lack of proper material to build a good LC tank circuit. However,
+                        our Audio Detection circuit worked very well and we successfully demodulated
+                        our input signal signal and recovered the information signal.
+                    </p>
+                    <p>
+                        By undertaking this project I learned about the fundamentals of amplitude modulation and how to create an AM Radio Reciever.
+                        My group's project presentation can be found <a href="pdfs/4BL Project Presentation.pdf" target="_blank">here</a> and our final
+                        report can be found <a href="pdfs/4BL Project Report.pdf" target="_blank">here</a>.
                     </p>
                 </div>
             </section>
