--- a/index.html
+++ b/index.html
@@ -128,12 +128,16 @@
 
 								<h3>Course Work</h3>
 								<ul>
-									<li>Principles of Feedback Control</li>
+									<li>Computer Organization</li>
 									<li>Data Structures & Algorithms</li>
 									<li>Systems and Signals</li>
-									<li>Logic Design of Digital Systems</li>
+									<li>Digital Signal Processing</li>
+									<li>Engineering Electromagnetics</li>
 									<li>Probability and Statistics</li>
+									<li>Principles of Feedback Control</li>
+									<li>Logic Design of Digital Systems</li>
 									<li>Statics and Strengths of Materials</li>
+									<li>SFluid Mechanics</li>
 								</ul>
 							</div>
 						</div>
