--- a/index.html
+++ b/index.html
@@ -136,8 +136,10 @@
 									<li>Probability and Statistics</li>
 									<li>Principles of Feedback Control</li>
 									<li>Logic Design of Digital Systems</li>
-									<li>Statics and Strengths of Materials</li>
-									<li>SFluid Mechanics</li>
+									<li>Digital Signal Processing, Neural Signal Processing and Machine Learning</li>
+									<li>Circuit Theory (Honors)</li>
+									<li>Statics and Strength of Materials</li>
+									<li>Fluid Mechanics</li>
 								</ul>
 							</div>
 						</div>
