--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 									<li>Probability and Statistics</li>
 									<li>Principles of Feedback Control</li>
 									<li>Logic Design of Digital Systems</li>
-									<li>Digital Signal Processing, Neural Signal Processing and Machine Learning</li>
+									<li>Digital Signal Processing</li>
+									<li>Neural Signal Processing and Machine Learning</li>
 									<li>Circuit Theory (Honors)</li>
 									<li>Statics and Strength of Materials</li>
 									<li>Fluid Mechanics</li>
